# BabAR

./: .gitignore  .gitmodules  LICENSE  README.md  changelog.md  pyproject.toml
docs/: installation.md  phoneme_inventory.md  running_time.md  usage.md
src/: pipeline.py  syllabify.py
src/babar/: infer.py
src/babar/datamodules/: contextual_vtc_datamodule.py
src/babar/decoders/: decoders.py
src/babar/models/: BaseModule.py  acoustic_models.py
weights/: best.ckpt  vocab-phoneme-tinyvox.json
