[project]
name = "BabAR"
version = "1.0"
description = "BabAR version 1.0 (Interspeech release)"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    # VTC
    "pyannote-audio>=3.4.0",
    "segma",
    "tqdm>=4.67.1",
    # BabAR inference
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.45.0",
    "pytorch-lightning>=2.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0,<2.3.0",
    "pandas>=2.2.0",
    "datasets>=3.1.0",
    # Shared
    "polars[rtcompat]>=1.0.0",
    # Needed by VTC/scripts/convert.py
    "torchcodec>=0.7.0",
    "panphon>=0.20",
]

[tool.uv.sources]
segma = { git = "https://github.com/arxaqapi/segma", rev = "9c398231011a7b16b76cf7be8e99c8b4dbc7ac35" }
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
